make some changed
