# src/controllers/types/auth-request.type.ts
@@ -1,0 +1,8 @@
+export interface AuthCreateRequest {
+  email: string;
+  password: string;
+}
+export interface AuthVerifyRequest {
+  email: string;
+  confirmationCode: string;
+}
